English fully implemented

--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
         <h3>אם על המסך מופיעה התמונה הבאה:</h3>
         <div class="flex">
           <p>
-            יש ללחוץ על כפתור ה <strong>"F8"</strong> או
-            <strong>"F10"</strong> בשורה העליונה ביותר במקלדת.<br />
-            (לפעמים צריך ללחוץ יחד עם כפתור ה <strong>"Fn"</strong> הממוקם
-            בתחתית המקלדת במקלדת).<br />
+            יש ללחוץ על כפתור ה <strong>F8</strong> או
+            <strong>F10</strong> בשורה העליונה ביותר במקלדת.<br />
+            (לפעמים צריך ללחוץ יחד עם כפתור ה <strong>Fn</strong> הממוקם בתחתית
+            המקלדת במקלדת).<br />
             במידה ולחיצה על כפתורים אלו לא הפעילו את המצלמה, יש לבדוק אם קיימת
             חלונית הזזה פיזית על מצלמת המחשב.<br />
             אם כן, יש להזיז אותה לאחד הצדדים בכדי להפעיל את המצלמה.
@@ -180,7 +180,12 @@
             נרצה לראות משהו הדומה לתמונה.<br />
             ניתן לראות שהאתר מצליח לזהות את מצלמת המחשב אך היא אינה מחוברת.<br />
             אם אתר זה לא הצליח לזהות את המצלמה, יש לנסות שוב דרך דפדפן
-            "FireFox"<br />
+            <a
+              href="https://www.mozilla.org/en-US/firefox/new/"
+              class="hyper_link"
+              target="_blank"
+              >Firefox.</a
+            ><br />
             אם האתר עדיין לא מצליח לזהות את המצלמה, יש לבדוק האם מותקנות תוכנות
             אנטיוירוס על המחשב אשר עלולות למנוע גישה למצלמה.<br /><br />
             <strong>יש ללחוץ על כפתור "Test my cam".</strong>
@@ -201,8 +206,15 @@
         </div>
         <p>
           נכנס חזרה אל המבחנים דרך הקישור בתיבת המייל ונראה אם המצלמה מתחברת.<br />
-          במידה ולא, יש לנסות שוב דרך דפדפן "FireFox" ולוודא שאין אנטיוירוסים
-          מותקנים על המחשב אשר עלולים להפריע להרשאות חיבור המצלמה.
+          במידה ולא, יש לנסות שוב דרך דפדפן
+          <a
+            href="https://www.mozilla.org/en-US/firefox/new/"
+            class="hyper_link"
+            target="_blank"
+            >Firefox</a
+          >
+          ולוודא שאין אנטיוירוסים מותקנים על המחשב אשר עלולים להפריע להרשאות
+          חיבור המצלמה.
         </p>
       </div>
       <script src="main.js"></script>
