--- a/index_en.html
+++ b/index_en.html
@@ -114,104 +114,132 @@
         <h3>אם על המסך מופיעה התמונה הבאה:</h3>
         <div class="flex">
           <p>
-            Press the <strong>"F8"</strong> or "F10" button on the top row of
-            the keyboard<br />
-            Sometimes you have to press the <strong>"Fn"</strong> button
+            Press the <strong>F8</strong> or <strong>F10</strong> button on the
+            top row of the keyboard<br />
+            Sometimes you have to press the <strong>Fn</strong> button
             simutaneously located on the lower side of the keyboard.<br />
-            במידה ולחיצה על כפתורים אלו לא הפעילו את המצלמה, יש לבדוק אם קיימת
-            חלונית הזזה פיזית על מצלמת המחשב.<br />
-            אם כן, יש להזיז אותה לאחד הצדדים בכדי להפעיל את המצלמה.
+            If pressing these buttons did not activate the camera,<br />
+            check if there is a physical sliding window on the computer
+            camera.<br />
+            If so, it must be moved to one side in order to activate the camera.
           </p>
           <div class="photo">
             <img class="screenshot" src="Images/cameraclosed.png" />
           </div>
         </div>
         <div class="h2div">
-          <h3>אם על המסך מופיעה התמונה הבאה:</h3>
+          <h3>If the following image appears on the screen:</h3>
         </div>
         <div class="flex">
           <div>
-            יש לוודא שהמצלמה מאופשרת בדפדפן:<br /><br />
+            Make sure the camera is enabled in the browser:<br /><br />
             <div class="photo">
               <img class="screenshot" src="Images/camera ap.png" />
             </div>
-            <br />אם סימן המצלמה נראה כמו בתמונה מעלה - סימן שהמצלמה מאופשרת.
+            <br />If the camera symbol looks like the image above - it means
+            that the camera is enabled.
           </div>
           <div class="photo"><img class="screenshot" src="Images/2.png" /></div>
         </div>
         <div class="flex">
           <p>
-            אם על סימן המצלמה יש X אדום, סימן שהיא חסומה - יש ללחוץ על הציור של
-            המצלמה כפי שמתואר בתמונה ולאפשר את השימוש במצלמה.<br />
-            לאחר מכן יש לסגור את חלון המבחן ולהיכנס שוב דרך הקישור בתיבת המייל.
+            If there is a red X on the camera symbol, it means that it is
+            blocked.<br />
+            Please click on the camera image as described in the picture and
+            enable the use of the camera.<br />
+            After that, close the test window and log in again through the link
+            that was sent to you via Email / SMS.
           </p>
           <div class="photo"><img class="screenshot" src="Images/3.png" /></div>
         </div>
         <div class="h2div">
-          <h2>עדיין לא רואה את עצמך במסך בדיקת המצלמה?</h2>
+          <h2>You still do not see yourself on the camera test screen?</h2>
         </div>
         <p>
           <strong
-            >יש לבדוק האם התוכנה המקורית של המצלמה במחשב מזהה את המצלמה:</strong
+            >Please check if the camera's original application on the computer
+            recognizes the camera:</strong
           >
         </p>
         <div class="flex">
           <p>
-            ראשית, במידה וחלון הבחינה פתוח, יש לסגור אותו.<br />
-            יש ללחוץ על כפתור ה-Windows בתחתית המסך ולהקליד את המילה "מצלמה" (אם
-            שפת ממשק המחשב היא באנגלית, יש לחפש "Camera").
+            1. If the test window is open, it must be closed.<br />
+            2. Click on the Windows button at the bottom of the screen and type
+            the word "Camera"
           </p>
           <div class="photo"><img class="screenshot" src="Images/4.png" /></div>
         </div>
         <div class="flex">
           <p>
-            יש ללחוץ על התוכנה ולבדוק את תקינות המצלמה.<br />
-            אם מופיע מסך שגיאה כלשהו הדומה לתמונה, יש לוודא שאכן סגרת את כל
-            התוכנות שעלולות לבצע שימוש במצלמה.<br />
-            אם סגירת כל התוכנות הנוספות לא פתרה את הבעיה, יש לבצע אתחול מחדש של
-            המחשב ולהיכנס שוב למבחנים.<br />
-            אם הבעיה עדיין לא נפתרה, יש לנסות להתחבר ממחשב אחר בעל מצלמה תקינה.
+            Click on the application and make sure the camera is in order.<br />
+            If any screen error similar to the image appears, make sure you have
+            closed all the programs that may make use of the camera.<br />
+            If closing all other applications did not solve the problem, restart
+            the computer and enter the tests again.<br />
+            If the problem still hasn't been resolved, please try to connect
+            from another computer with a proper camera.
           </p>
           <div class="photo"><img class="screenshot" src="Images/5.png" /></div>
         </div>
 
         <h3>
-          אם המצלמה אכן תקינה בתוכנת המחשב, יש להיכנס לאתר
+          If the camera is indeed in order in the computer application, you must
+          enter the website
           <a class="hyper_link" href="https://webcamtests.com" target="_blank"
             >Webcam test</a
           >
-          ולבצע את השלבים הבאים:
+          and perform the following:
         </h3>
 
         <div class="flex">
           <p>
-            ראשית, יש לוודא שהאתר מצליח לזהות את מצלמת המחשב.<br />
-            נרצה לראות משהו הדומה לתמונה.<br />
-            ניתן לראות שהאתר מצליח לזהות את מצלמת המחשב אך היא אינה מחוברת.<br />
-            אם אתר זה לא הצליח לזהות את המצלמה, יש לנסות שוב דרך דפדפן
-            "FireFox"<br />
-            אם האתר עדיין לא מצליח לזהות את המצלמה, יש לבדוק האם מותקנות תוכנות
-            אנטיוירוס על המחשב אשר עלולות למנוע גישה למצלמה.<br /><br />
-            <strong>יש ללחוץ על כפתור "Test my cam".</strong>
+            First, make sure that the website is able to recognize the computer
+            camera.<br />
+            We would like to see something similar to the image.<br />
+            You can see tha the website is able to recognize the computer camera
+            but it is not connected.<br />
+            If the website was not able to recognize the camera, try again
+            through
+            <a
+              href="https://www.mozilla.org/en-US/firefox/new/"
+              class="hyper_link"
+              target="_blank"
+              >Firefox</a
+            >
+            browser.<br />
+            If the site still fails to recognize the camera, check of any
+            anti-virus software is installed on the computer that may prevent
+            access to the camera.<br /><br />
+            <strong>Click on the "Test my cam" button.</strong>
           </p>
           <div class="photo"><img class="screenshot" src="Images/6.png" /></div>
         </div>
         <div class="flex">
-          <p>לאחר מכן, יש לתת אישור למצלמה להתחבר לאתר.</p>
+          <p>After that, allow the camera to connect to the site.</p>
           <div class="photo"><img class="screenshot" src="Images/7.png" /></div>
         </div>
         <div class="flex">
           <p>
-            לאחר אישור המצלמה, יש לוודא שהאתר הצליח להתחבר למצלמה כמו בתמונה.<br />
-            <strong>נלחץ על כפתור "Test my cam".</strong><br />
-            בשלב זה תמונת אמורה להופיע על המסך.
+            After allowing the camera to connect to the site, make sure that the
+            site was able to connect to the camera as in the picture<br />
+            <strong>Click on the "Test my cam" button.</strong><br />
+            At this point an image should appear on the screen.
           </p>
           <div class="photo"><img class="screenshot" src="Images/8.png" /></div>
         </div>
         <p>
-          נכנס חזרה אל המבחנים דרך הקישור בתיבת המייל ונראה אם המצלמה מתחברת.<br />
-          במידה ולא, יש לנסות שוב דרך דפדפן "FireFox" ולוודא שאין אנטיוירוסים
-          מותקנים על המחשב אשר עלולים להפריע להרשאות חיבור המצלמה.
+          Press the link to the tests that was sent to you via Email / SMS and
+          see if the camera connects.<br />
+          If not, you should try again through the
+          <a
+            href="https://www.mozilla.org/en-US/firefox/new/"
+            class="hyper_link"
+            target="_blank"
+            >Firefox</a
+          >
+          browser and make sure that there is no anti-virus software installed
+          on the computer that might interfere with the camera's connection
+          permissions.
         </p>
       </div>
       <script src="main.js"></script>
